--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.sgg.git</groupId>
-    <artifactId>git-test</artifactId>
+    <artifactId>Git_GitHub_Gitee_GitLab</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
